# chrome-debug-mcp

./: .gitignore  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  README.md  dist-workspace.toml  glama.json
.github/workflows/: release.yml
src/: main.rs
src/chrome_mcp_handler/: connect_chrome.rs  mod.rs
src/chrome_mcp_handler/cdp_domains/: mod.rs
src/chrome_mcp_handler/cdp_domains/custom/: get_custom_events.rs  mod.rs  send_cdp_command.rs
src/chrome_mcp_handler/cdp_domains/debugger/: evaluate_on_call_frame.rs  mod.rs  pause_on_load.rs  remove_breakpoint.rs  resume.rs  search_scripts.rs  set_breakpoint.rs  step_over.rs
src/chrome_mcp_handler/cdp_domains/fetch/: enable_proxy_auth.rs  mod.rs
src/chrome_mcp_handler/cdp_domains/input/: click_element.rs  fill_input.rs  mod.rs
src/chrome_mcp_handler/cdp_domains/log/: get_console_logs.rs  mod.rs
src/chrome_mcp_handler/cdp_domains/network/: get_network_logs.rs  mod.rs
src/chrome_mcp_handler/cdp_domains/page/: capture_screenshot.rs  mod.rs  navigate.rs  reload.rs  scroll.rs
src/chrome_mcp_handler/cdp_domains/performance/: get_performance_metrics.rs  mod.rs
src/chrome_mcp_handler/cdp_domains/runtime/: evaluate_js.rs  inspect_dom.rs
src/chrome_mcp_handler/cdp_domains/tracing/: mod.rs  profile_page_performance.rs
src/chrome_mcp_handler/chrome_instance/: mod.rs  restart_chrome.rs  stop_chrome.rs
src/chrome_mcp_handler/debugger/: remove_breakpoint.rs  set_breakpoint.rs  step_over.rs
src/chrome_mcp_handler/page/: navigate.rs
src/chrome_mcp_handler/runtime/: evaluate_js.rs  mod.rs
wix/: main.wxs
