[package]
name = "chrome-debug-mcp"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/raultov/chrome-debug-mcp"
description = "Rust MCP Server for full Chrome CDP control and interactive JS debugging"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "chrome", "cdp", "debugging", "devtools"]
categories = ["development-tools::debugging"]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
cdp-lite = "0.1.1"
rust-mcp-sdk = "0.8.3"
schemars = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
