[package]
name = "chrome-debug-mcp"
version = "0.5.0"
edition = "2024"
authors = ["raultov <raultov@protonmail.com>"]
homepage = "https://github.com/raultov/chrome-debug-mcp"
repository = "https://github.com/raultov/chrome-debug-mcp"
description = "Rust MCP Server for full Chrome CDP control and interactive JS debugging"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "chrome", "cdp", "debugging", "devtools"]
categories = ["development-tools::debugging"]

[package.metadata.wix]
upgrade-guid = "2958DD81-8E94-4127-88CF-C57E5FC53A12"
path-guid = "5C5655D9-C512-4FBE-B9B9-30A4BB0E55BF"
license = false
eula = false

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = "0.22.1"
cdp-lite = "0.1.1"
rust-mcp-sdk = "0.8.3"
schemars = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
futures-util = "0.3.32"
http-body-util = "0.1.3"
hyper = "1.0.0"
hyper-util = "0.1.20"
tokio-tungstenite = "0.28.0"
